# google-cloud-get-lat-long-from-direction

./: .env.example  README.md  pyproject.toml
data/: entidades_geocodificadas.csv
data/final/: entidades_geocodificadas_final.csv
data/geocoding_batches/: batch_0.csv  batch_1.csv  batch_10.csv  batch_11.csv  batch_12.csv  batch_13.csv  batch_14.csv  batch_15.csv  batch_16.csv  batch_17.csv  batch_18.csv  batch_19.csv  batch_2.csv  batch_20.csv  batch_21.csv  batch_22.csv  batch_23.csv  batch_24.csv  batch_25.csv  batch_26.csv  batch_27.csv  batch_28.csv  batch_29.csv  batch_3.csv  batch_30.csv  batch_31.csv  batch_32.csv  batch_4.csv  batch_5.csv  batch_6.csv  batch_7.csv  batch_8.csv  batch_9.csv  progress.txt
data/limpieza_datos/: datos_limpios.csv  entidades_geocodificadas_final_edited.csv
src/: clean_data.py  config.py  cost_estimator.py  geocoding.py  geocoding_pruebas.py  merge_batches.py
